<resources>
    <string name="app_name">PokemonB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="color">color</string>
    <string name="type">type</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="pokemon">Pokemon</string>
</resources>